// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should have all props including customProps set correctly 1`] = `
<h1
  className="heading italic visually-hidden level-1 size-small weight-200"
  id="id"
  style={Object {}}
>
  All props and custom attrs
</h1>
`;

exports[`Heading should render a heading component 1`] = `
<h1
  className="heading level-1 weight-700"
  style={Object {}}
>
  Test
</h1>
`;

exports[`Heading should render a heading component with isItalic prop set 1`] = `
<h1
  className="heading italic level-1 weight-700"
  style={Object {}}
>
  Test
</h1>
`;

exports[`Heading should render a heading component with isVisuallyHidden prop set 1`] = `
<h1
  className="heading visually-hidden level-1 weight-700"
  style={Object {}}
>
  Test
</h1>
`;

exports[`Heading should render a heading component with size prop set 1`] = `
<h1
  className="heading level-1 size-large weight-700"
  style={Object {}}
>
  Test
</h1>
`;

exports[`Heading should render a heading component with weight prop set 1`] = `
<h1
  className="heading level-1 weight-200"
  style={Object {}}
>
  Test
</h1>
`;

exports[`Heading should support rendering a string as children 1`] = `
<h1
  className="heading level-1 weight-700"
  style={Object {}}
>
  String
</h1>
`;

exports[`Heading should support rendering an array of elements as a children 1`] = `
<h1
  className="heading level-1 weight-700"
  style={Object {}}
>
  <span>
    Element 1
  </span>
  <span>
    Element 2
  </span>
  <span>
    Element 3
  </span>
</h1>
`;

exports[`Heading should support rendering an element as children 1`] = `
<h1
  className="heading level-1 weight-700"
  style={Object {}}
>
  <span>
    Element
  </span>
</h1>
`;
